--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
  frontend:
   build: ./frontend
-  image: 'sausage-store-frontend'
+  image: ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-frontend:latest
   restart: always
   container_name: sausage-store-frontend
 
@@ -12,9 +12,17 @@ services:
 
  backend:
   build: ./backend
-  image: 'sausage-store-backend'
+  image: ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:latest
   restart: always
   container_name: sausage-store-backend
 
   ports:
     - '8080:8080'
+
+networks:
+  frontend:
+    name: sausage-store
+    driver: custom-driver-1
+  backend:
+    name: sausage-store
+    driver: custom-driver-1
