--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -5,8 +5,8 @@ stages:
     - deploy
     - rollback
 
-include:
-    - template: Security/SAST.gitlab-ci.yml
+#include:
+#    - template: Security/SAST.gitlab-ci.yml
 
 build-code-job:
     stage: build
@@ -26,11 +26,11 @@ build-code-job:
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-frontend:${CI_COMMIT_REF_SLUG}
     when: manual
 
-sast:
-  stage: test
-  variables:
-    SAST_DEFAULT_ANALYZERS: eslint,semgrep,nodejs-scan
-    SAST_EXCLUDED_ANALYZERS: "spotbugs"
+#sast:
+#  stage: test
+#  variables:
+#    SAST_DEFAULT_ANALYZERS: eslint,semgrep,nodejs-scan
+#    SAST_EXCLUDED_ANALYZERS: "spotbugs"
 
 sonarqube-check-frontend:
     stage: test
