--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
  frontend:
   build: ./frontend
-  image: ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-frontend:latest
+  image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest
   restart: always
   container_name: sausage-store-frontend
 
@@ -12,7 +12,7 @@ services:
 
  backend:
   build: ./backend
-  image: ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:latest
+  image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
   container_name: sausage-store-backend
 
