add docker compose

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -5,8 +5,8 @@ stages:
     - deploy
     - rollback
 
-#include:
-#    - template: Security/SAST.gitlab-ci.yml
+include:
+    - template: Security/SAST.gitlab-ci.yml
 
 build-code-job:
     stage: build
@@ -26,11 +26,11 @@ build-code-job:
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:${CI_COMMIT_REF_SLUG}
     when: manual
 
-#sast:
-#  stage: test
-#  variables:
-#    SAST_DEFAULT_ANALYZERS: eslint,semgrep,spotbugs
-#    SAST_EXCLUDED_ANALYZERS: "nodejs-scan"
+sast:
+  stage: test
+  variables:
+    SAST_DEFAULT_ANALYZERS: eslint,semgrep,spotbugs
+    SAST_EXCLUDED_ANALYZERS: "nodejs-scan"
 
 sonarqube-check-backend:
     stage: test
