--- a/sausage-store.service
+++ b/sausage-store.service
@@ -16,7 +16,7 @@ ExecStartPre=/usr/bin/docker-compose down -v
 # Compose up
 ExecStart=/usr/bin/docker-compose up
 
-# Compose down, remove containers
+# Compose down
 ExecStop=/usr/bin/docker-compose down
 
 [Install]
