--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest
   restart: always
   container_name: sausage-store-frontend
-
+  networks:
+    - net-sausage-store
+    
   ports:
     - '80:80'
 
@@ -13,3 +15,9 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
   container_name: sausage-store-backend
+  networks:
+    - net-sausage-store
+
+networks:
+ net-sausage-store:
+  driver: bridge
