--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: '3.3'
 
 services:
  frontend:
-  image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest
+  image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest 
   restart: always
   container_name: sausage-store-frontend
   networks:
     - net-sausage-store
-    
   ports:
     - '80:80'
 
@@ -15,6 +14,11 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
   container_name: sausage-store-backend
+  environment:
+    - DATA_SOURCE_CONNECT=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9.rw.mdb.yandexcloud.net:6432/sausage
+    - DATA_SOURCE_NAME=sausage
+    - DATA_SOURCE_PASS=your_password
+    - MONGO_CONNECT=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
   networks:
     - net-sausage-store
 
