--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.8.3-openjdk-16
 
-ARG APP_VERSION
+ARG APP_VERSION=1.0.0-def
 
 COPY ./src /backend/src
 COPY *.xml /backend/
@@ -16,13 +16,6 @@ RUN mkdir /backend/sausage-store
 # копирование собранного бэкенда
 RUN mv /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
 
-RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
-            --spring.datasource.url=$DATA_SOURCE_CONNECT \
-            --spring.datasource.username=$DATA_SOURCE_NAME \
-            --spring.datasource.password=$DATA_SOURCE_PASS \
-            --spring.data.mongodb.uri=$MONGO_CONNECT" \
-            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
+ENTRYPOINT ["java","-jar","/backend/sausage-store/sausage-store-${APP_VERSION}.jar"]
 
-EXPOSE 8080
-
-ENTRYPOINT /backend/sausage-store/run_script.sh
+# docker build --build-arg APP_VERSION=1.0.0-def -t sausage-store-backend:latest .
