Исправления по ревью

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,10 +17,10 @@ RUN mkdir /backend/sausage-store
 RUN mv /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
 
 RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
-            --spring.datasource.url=$DATA_SOURCE_CONNECT \
-            --spring.datasource.username=$DATA_SOURCE_NAME \
-            --spring.datasource.password=$DATA_SOURCE_PASS \
-            --spring.data.mongodb.uri=$MONGO_CONNECT" \
+            --spring.datasource.url=\$DATA_SOURCE_CONNECT \
+            --spring.datasource.username=\$DATA_SOURCE_NAME \
+            --spring.datasource.password=\$DATA_SOURCE_PASS \
+            --spring.data.mongodb.uri=\$MONGO_CONNECT" \
             > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
 
 EXPOSE 8080
