--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install -g http-server
 RUN npm run build
 EXPOSE 80
 
-CMD useradd admin
+CMD useradd --uid 1001 --gid 1002 admin
 USER admin
 
 ENTRYPOINT ["http-server", "dist/frontend/", "-p", "80", "--proxy", "http://sausage-store-backend:8080"]
