--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-FROM maven:3.8.3-openjdk-16 AS builder
+FROM maven:3.8.3-openjdk-16
 
 ARG APP_VERSION
 
-WORKDIR /backend
-
 COPY ./src /backend/src
 COPY *.xml /backend/
+
+WORKDIR /backend
 
 # запуск сборки кода
 RUN mvn package -Dversion.application=$APP_VERSION
@@ -13,20 +13,8 @@ RUN mvn package -Dversion.application=$APP_VERSION
 # создание директории, в которую копируются артефакты. Это нужно для организации удобной структуры архива
 RUN mkdir /backend/sausage-store
 
-
-
-
-FROM maven:3.8.3-openjdk-16
-
-ARG APP_VERSION
-
 # копирование собранного бэкенда
-WORKDIR /backend
-RUN mkdir /backend/sausage-store
-
-COPY --from=builder /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
-COPY --from=builder /backend/*.xml /backend/
-COPY --from=builder /backend/src /backend/src
+RUN mv /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
 
 RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
             --spring.datasource.url=\$DATA_SOURCE_CONNECT \
@@ -36,10 +24,5 @@ RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
             > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
 
 EXPOSE 8080
-
-RUN groupadd --gid 1002 admin \
-    && useradd --uid 1001 --gid 1002 admin
-
-USER admin
 
 ENTRYPOINT /backend/sausage-store/run_script.sh
