--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,9 +30,9 @@ COPY --from=builder /backend/src /backend/src
 
 RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
             --spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9.rw.mdb.yandexcloud.net:6432/sausage \
-            --spring.datasource.username=sausage \
-            --spring.datasource.password=your_password \
-            --spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true" \
+            --spring.datasource.username=\$DATA_SOURCE_NAME \
+            --spring.datasource.password=\$DATA_SOURCE_PASS \
+            --spring.data.mongodb.uri=\$MONGO_CONNECT" \
             > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
 
 EXPOSE 8080
