--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,10 +14,10 @@ COPY --from=builder /usr/src/app/dist/frontend /usr/src/app/dist/frontend
 
 RUN npm install -g http-server
 
-RUN groupadd --gid 1002 admin \
-    && useradd --uid 1001 --gid 1002 admin
+#RUN groupadd --gid 1002 admin \
+#    && useradd --uid 1001 --gid 1002 admin
 
-USER admin
+#USER admin
 
 EXPOSE 80
 
