--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,8 +2,8 @@ FROM node:14.17.3 AS builder
 
 WORKDIR /usr/src/app
 COPY . .
-RUN npm install
-RUN npm run build
+
+RUN npm install && npm run build
 
 # Multi stage
 FROM node:17-alpine3.14
@@ -12,11 +12,9 @@ WORKDIR /usr/src/app
 
 COPY --from=builder /usr/src/app/dist/frontend /usr/src/app/dist/frontend
 
-RUN npm install -g http-server
+RUN npm install -g http-server && adduser -D admin -u 1001
 
-RUN adduser -D admin -u 1001    
-
-#USER admin
+USER admin
 
 EXPOSE 80
 
