Исправления по второму Review

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,10 +18,9 @@ FROM maven:3.8.3-openjdk-16-slim
 ARG APP_VERSION
 
 # копирование собранного бэкенда
-WORKDIR /backend
-RUN mkdir /backend/sausage-store
+WORKDIR /backend/sausage-store
 
-COPY -chown=admin:admin --from=builder /backend/target/sausage-store.jar /backend/sausage-store/sausage-store.jar
+COPY --chown=admin:admin --from=builder /backend/target/sausage-store.jar /backend/sausage-store/sausage-store.jar
 # COPY -chown=admin:admin --from=builder /backend/*.xml /backend/
 # COPY -chown=admin:admin --from=builder /backend/src /backend/src
 
@@ -30,10 +29,9 @@ RUN printf "java -jar /backend/sausage-store/sausage-store.jar \
             --spring.datasource.username=\$DATA_SOURCE_NAME \
             --spring.datasource.password=\$DATA_SOURCE_PASS \
             --spring.data.mongodb.uri=\$MONGO_CONNECT" \
-            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
-
-RUN groupadd --gid 1002 admin \
-    && useradd --uid 1001 --gid 1002 admin
+            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh \
+            && RUN groupadd --gid 1002 admin \
+            && useradd --uid 1001 --gid 1002 admin
 
 USER admin
 
