Исправления по второму Review

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ COPY ./src /backend/src
 COPY *.xml /backend/
 
 # запуск сборки кода
-# создание директории, в которую копируются артефакты. Это нужно для организации удобной структуры архива -Dversion.application=$APP_VERSION
+# создание директории, в которую копируются артефакты. Это нужно для организации удобной структуры архива
 RUN mvn package -Dversion.application=$APP_VERSION && mkdir /backend/sausage-store
 
 
@@ -21,19 +21,19 @@ ARG APP_VERSION
 WORKDIR /backend
 RUN mkdir /backend/sausage-store
 
+COPY --from=builder /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
+COPY --from=builder /backend/*.xml /backend/
+COPY --from=builder /backend/src /backend/src
 
-COPY --from=builder /backend/target/sausage-store.jar /backend/sausage-store/sausage-store.jar
-# COPY -chown=admin:admin --from=builder /backend/*.xml /backend/
-# COPY -chown=admin:admin --from=builder /backend/src /backend/src
-
-RUN printf "java -jar /backend/sausage-store/sausage-store.jar \
+RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
             --spring.datasource.url=\$DATA_SOURCE_CONNECT \
             --spring.datasource.username=\$DATA_SOURCE_NAME \
             --spring.datasource.password=\$DATA_SOURCE_PASS \
             --spring.data.mongodb.uri=\$MONGO_CONNECT" \
-            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh \
-            && RUN groupadd --gid 1002 admin \
-            && useradd --uid 1001 --gid 1002 admin
+            > /backend/sausage-store/run_script.sh && chmod +x /backend/sausage-store/run_script.sh
+
+RUN groupadd --gid 1002 admin \
+    && useradd --uid 1001 --gid 1002 admin
 
 USER admin
 
