--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,9 +21,9 @@ ARG APP_VERSION
 WORKDIR /backend
 RUN mkdir /backend/sausage-store
 
-COPY --chown admin --from=builder /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
-COPY --chown admin --from=builder /backend/*.xml /backend/
-COPY --chown admin --from=builder /backend/src /backend/src
+COPY --from=builder --chown admin /backend/target/sausage-store-$APP_VERSION.jar /backend/sausage-store/sausage-store-$APP_VERSION.jar
+COPY --from=builder --chown admin /backend/*.xml /backend/
+COPY --from=builder --chown admin /backend/src /backend/src
 
 RUN printf "java -jar /backend/sausage-store/sausage-store-${APP_VERSION}.jar \
             --spring.datasource.url=\$DATA_SOURCE_CONNECT \
