--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -79,3 +79,26 @@ upload-release:
     after_script:
       - docker logout ${CI_REGISTRY}
 #
+deploy:
+    stage: deploy
+    before_script:
+      # устанавливаем ssh-agent для удобства аутентификации по ssh (ssh-agent)
+      - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
+      - eval $(ssh-agent -s)
+      # сохраняем сгенеренный ранее приватный ключ для раннера
+      - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+      - mkdir -p ~/.ssh
+      - chmod 700 ~/.ssh
+      - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
+      - chmod 644 ~/.ssh/known_hosts
+    script:
+      - scp -r ./sausage-store.service ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
+      - ssh ${DEV_USER}@${DEV_HOST}
+        "export "VERSION=${VERSION}";
+        export "DEV_USER=${DEV_USER}";
+        export "REGISTRY_ACCESS_TOKEN=${REGISTRY_ACCESS_TOKEN}";
+        export "REGISTRY_USER=${REGISTRY_USER}";
+        /bin/bash -s " < ./frontend/deploy.sh
+    when: manual
+    environment:
+        name: deploy
