--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -94,9 +94,8 @@ deploy:
       - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
       - chmod 644 ~/.ssh/known_hosts
     script:
-      - touch ./env_file
-      - echo -e "DATA_SOURCE_CONNECT=$DATA_SOURCE_CONNECT \nDATA_SOURCE_NAME=$DATA_SOURCE_NAME \nDATA_SOURCE_PASS=$DATA_SOURCE_PASS 'n' \nMONGO_CONNECT=$MONGO_CONNECT \n" > ./env_file
-      - scp -r ./env_file ./sausage-store.service ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
+      - echo -e "DATA_SOURCE_CONNECT=$DATA_SOURCE_CONNECT\nDATA_SOURCE_NAME=$DATA_SOURCE_NAME\nDATA_SOURCE_PASS=$DATA_SOURCE_PASS\nMONGO_CONNECT=$MONGO_CONNECT\n" > .env_file
+      - scp -r ./.env_file ./sausage-store.service ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
       - ssh ${DEV_USER}@${DEV_HOST}
         "export "VERSION=${VERSION}";
         export "DEV_USER=${DEV_USER}";
