--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -72,6 +72,7 @@ upload-release:
       - docker:dind
     script:
     before_script:
+      - until docker info; do sleep 1; done
       - docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}
     script:
       - docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:${CI_COMMIT_REF_SLUG}
