--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -25,6 +25,11 @@ build-code-job:
       - docker build --build-arg APP_VERSION=${VERSION} -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:${CI_COMMIT_REF_SLUG} .
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend:${CI_COMMIT_REF_SLUG}
 
+hadolint_dockerfile:
+  stage: test
+  script:
+      - hadolint frontend/Dockerfile
+
 sast:
   stage: test
   variables:
