--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -28,7 +28,9 @@ build-code-job:
 hadolint_dockerfile:
   stage: test
   script:
-      - hadolint frontend/Dockerfile
+      - curl -sSL -o /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v2.8.0/hadolint-Linux-x86_64
+      - chmod +x /bin/hadolint
+      - /bin/hadolint frontend/Dockerfile
 
 sast:
   stage: test
