--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -30,7 +30,8 @@ hadolint_dockerfile:
   script:
       - curl -sSL -o /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v2.8.0/hadolint-Linux-x86_64
       - chmod +x /bin/hadolint
-      - /bin/hadolint backend/Dockerfile
+      - cd backend
+      - /bin/hadolint ./Dockerfile
 
 sast:
   stage: test
